--- a/playbooks/os/couchbase-cluster/vars.yml
+++ b/playbooks/os/couchbase-cluster/vars.yml
@@ -6,6 +6,11 @@
 #               160GB disk
 #               Usable for bucket : 14862 MB
 ram_per_server: 14862
+bucket_name: devicb
+bucket_type: couchbase
+bucket_ram: "{{ ram_per_server }}"
+bucket_replica: 1
+bucket_port: 11211
 
 openstack_network_prefix: 'openshift-ansible-{{ cluster_id }}'
 openstack_network_cidr: 192.168.{{ 1048576 | random % 256 }}.0/24
