--- a/roles/couchbase.couchbase-server/tasks/CentOS.yml
+++ b/roles/couchbase.couchbase-server/tasks/CentOS.yml
@@ -7,6 +7,24 @@
   yum: "name=libselinux-python state=present"
   tags: installation
 
+## Couchbase local
+
+- name: Copy RPM from local host 
+  copy: src={{ couchbase_server_centos_local_path }} dest=/tmp/{{ couchbase_server_centos_ee_package }} 
+  when: couchbase_server_edition == "local"
+  tags: installation
+
+- name: Install
+  yum: "name=/tmp/{{ couchbase_server_centos_ee_package }} state=present"
+  when: couchbase_server_edition == "local"
+  tags: installation
+
+- name: Package file cleanup
+  sudo: True
+  shell: "rm -rf /tmp/{{ couchbase_server_centos_ee_package }}"
+  when: couchbase_server_edition == "local"
+  tags: installation
+
 ## Couchbase Server Enterprise Edition
 
 - name: Download
