use labesl, set their own facts

--- a/playbooks/aws/openshift-cluster/tasks/launch_instances.yml
+++ b/playbooks/aws/openshift-cluster/tasks/launch_instances.yml
@@ -37,9 +37,6 @@
   when: ec2_assign_public_ip is not defined
 
 - set_fact:
-    openshift_node_labels:
-       region: "us-east"
-       type: "master"
     ec2_instance_type: "{{ ec2_master_instance_type | default(deployment_vars[deployment_type].type, true) }}"
     ec2_security_groups: "{{ ec2_master_security_groups
                     | default(deployment_vars[deployment_type].security_groups, true) }}"
@@ -52,18 +49,12 @@
   when: host_type == "etcd" and sub_host_type == "default"
 
 - set_fact:
-    openshift_node_labels:
-       region: "us-east"
-       type: "infra"
     ec2_instance_type: "{{ ec2_infra_instance_type | default(deployment_vars[deployment_type].type, true) }}"
     ec2_security_groups: "{{ ec2_infra_security_groups
                     | default(deployment_vars[deployment_type].security_groups, true) }}"
   when: host_type == "node" and sub_host_type == "infra"
 
 - set_fact:
-    openshift_node_labels:
-       region: "us-east"
-       type: "compute"
     ec2_instance_type: "{{ ec2_node_instance_type | default(deployment_vars[deployment_type].type, true) }}"
     ec2_security_groups: "{{ ec2_node_security_groups
                     | default(deployment_vars[deployment_type].security_groups, true) }}"
@@ -77,6 +68,18 @@
     ec2_security_groups: "{{ lookup('env', 'ec2_security_groups')
                     | default(deployment_vars[deployment_type].security_groups, true) }}"
   when: ec2_security_groups is not defined
+
+- set_fact:
+    openshift_node_labels:
+       region: "{{ ec2_region }}"
+       type: "{{ sub_host_type }}"
+  when: sub_host_type != "default"
+
+- set_fact:
+    openshift_node_labels:
+       region: "{{ ec2_region }}"
+       type: "{{ host_type }}"
+  when: sub_host_type == "default"
 
 - name: Find amis for deployment_type
   ec2_ami_find:
