update dns of couchbase nodes, creating bucket, testing

--- a/playbooks/os/couchbase-cluster/launch_couchbase.yml
+++ b/playbooks/os/couchbase-cluster/launch_couchbase.yml
@@ -19,6 +19,7 @@
       instances: "{{ cb_node_names }}"
       cluster: "{{ cluster_id }}"
       type: "{{ node_type }}"
+  - include: tasks/setdns.yml
 
 - include: install_couchbase.yml
   vars:
@@ -28,4 +29,3 @@
 
 - include: create_bucket.yml
 
-# TODO create XDCR from parent 
