--- a/playbooks/adhoc/zabbix_setup/clean_zabbix.yml
+++ b/playbooks/adhoc/zabbix_setup/clean_zabbix.yml
@@ -2,7 +2,9 @@
 - hosts: localhost
   gather_facts: no
   vars:
-    g_zserver: http://oso-rhel7-zabbix-web.kwoodsontest2.opstest.online.openshift.com/zabbix/api_jsonrpc.php
+    # Use this for local ZAIO
+    g_zserver: http://localhost/zabbix/api_jsonrpc.php
+
     g_zuser: Admin
     g_zpassword: zabbix
   roles:
