--- a/playbooks/os/couchbase-cluster/tasks/configure_openstack_network.yml
+++ b/playbooks/os/couchbase-cluster/tasks/configure_openstack_network.yml
@@ -52,8 +52,20 @@
   command: 'neutron security-group-rule-create --protocol TCP --port-range-min 22 --port-range-max 22 --remote-ip-prefix 0.0.0.0/0 {{ openstack_network_prefix }}-secgrp'
   when: security_group_show_result.rc == 1
 
-- name: Authorize ingress http
-  command: 'neutron security-group-rule-create --protocol TCP --port-range-min 8091 --port-range-max 8091 --remote-ip-prefix 0.0.0.0/0 {{ openstack_network_prefix }}-secgrp'
+- name: Authorize ingress couchbase web admin port and api port
+  command: 'neutron security-group-rule-create --protocol TCP --port-range-min 8091 --port-range-max 8092 --remote-ip-prefix 0.0.0.0/0 {{ openstack_network_prefix }}-secgrp'
+  when: security_group_show_result.rc == 1
+
+- name: Authorize ingress couchbase erlang port mapper 
+  command: 'neutron security-group-rule-create --protocol TCP --port-range-min 4369 --port-range-max 4369 --remote-ip-prefix 0.0.0.0/0 {{ openstack_network_prefix }}-secgrp'
+  when: security_group_show_result.rc == 1
+
+- name: Authorize ingress couchbase bucket  communication 
+  command: 'neutron security-group-rule-create --protocol TCP --port-range-min 11207 --port-range-max 11215 --remote-ip-prefix 0.0.0.0/0 {{ openstack_network_prefix }}-secgrp'
+  when: security_group_show_result.rc == 1
+
+- name: Authorize ingress couchbase node communication 
+  command: 'neutron security-group-rule-create --protocol TCP --port-range-min 21100 --port-range-max 21299 --remote-ip-prefix 0.0.0.0/0 {{ openstack_network_prefix }}-secgrp'
   when: security_group_show_result.rc == 1
 
 - name: Authorize intra-cluster traffic
