--- a/playbooks/os/couchbase-cluster/tasks/configure_openstack_network.yml
+++ b/playbooks/os/couchbase-cluster/tasks/configure_openstack_network.yml
@@ -60,7 +60,11 @@
   command: 'neutron security-group-rule-create --protocol TCP --port-range-min 4369 --port-range-max 4369 --remote-ip-prefix 0.0.0.0/0 {{ openstack_network_prefix }}-secgrp'
   when: security_group_show_result.rc == 1
 
-- name: Authorize ingress couchbase bucket  communication 
+- name: Authorize ingress couchbase https REST and CAPI for SSL  
+  command: 'neutron security-group-rule-create --protocol TCP --port-range-min 18091 --port-range-max 18092 --remote-ip-prefix 0.0.0.0/0 {{ openstack_network_prefix }}-secgrp'
+  when: security_group_show_result.rc == 1
+
+- name: Authorize ingress couchbase bucket communication 
   command: 'neutron security-group-rule-create --protocol TCP --port-range-min 11207 --port-range-max 11215 --remote-ip-prefix 0.0.0.0/0 {{ openstack_network_prefix }}-secgrp'
   when: security_group_show_result.rc == 1
 
