--- a/playbooks/os/couchbase-cluster/init_couchbase.yml
+++ b/playbooks/os/couchbase-cluster/init_couchbase.yml
@@ -4,10 +4,10 @@
   tasks:
  
   - name: Wait for Admin
-    wait_for: port=8091 delay=5
+    wait_for: port=8091 delay=10
 
   - name: Wait for EPMD
-    wait_for: port=4369 delay=5
+    wait_for: port=4369 delay=10
 
 
 - hosts: primary
@@ -27,13 +27,12 @@
     shell: "{{ couchbase_server_bin_path }}/couchbase-cli cluster-init -c {{ couchbase_server_primary_node }}:{{ couchbase_server_admin_port }} --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} --cluster-init-username={{ couchbase_server_admin }} --cluster-init-password={{ couchbase_server_password }} --cluster-init-port={{couchbase_server_admin_port}} --cluster-init-ramsize={{ couchbase_server_ram }}"
 
   - name: Initialize primary node
-    shell: "{{ couchbase_server_bin_path }}/couchbase-cli node-init -c {{ couchbase_server_primary_node }}:{{ couchbase_server_admin_port }} --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} --cluster-init-username={{ couchbase_server_admin }}"
+    shell: "{{ couchbase_server_bin_path }}/couchbase-cli node-init -c {{ couchbase_server_primary_node }}:{{ couchbase_server_admin_port }} --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} --cluster-init-username={{ couchbase_server_admin }} --node-init-hostname={{ ansible_fqdn }}"
     when: cb_major_version['stdout'] != 2
 
 
 - hosts: additional
   sudo: True
-  serial: 1
   vars_files:
     - roles/couchbase.couchbase-server/defaults/main.yml
   tasks:
@@ -46,7 +45,7 @@
     shell: "{{ couchbase_server_home_path }}/bin/couchbase-cli cluster-init -c {{ ansible_fqdn }}:{{ couchbase_server_admin_port }} --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} --cluster-init-username={{ couchbase_server_admin }} --cluster-init-password={{ couchbase_server_password }} --cluster-init-port={{couchbase_server_admin_port}} --cluster-init-ramsize={{ couchbase_server_ram }}"
 
   - name: Initialize additional node
-    shell: "{{ couchbase_server_home_path }}/bin/couchbase-cli node-init -c {{ ansible_fqdn }}:{{ couchbase_server_admin_port }} --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} --cluster-init-username={{ couchbase_server_admin }}"
+    shell: "{{ couchbase_server_home_path }}/bin/couchbase-cli node-init -c {{ ansible_fqdn }}:{{ couchbase_server_admin_port }} --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} --cluster-init-username={{ couchbase_server_admin }} --node-init-hostname={{ ansible_fqdn }}"
     when: cb_major_version['stdout'] != 2
 
 
@@ -63,7 +62,7 @@
     shell: cat /opt/couchbase/VERSION.txt | cut -d '.' -f1
     register: cb_major_version
 
-# Initializing with hostname pointing on local adress via etc/hosts
+# Initializing with hostname pointing on local adress via etc/hosts, TODO domain to put in var
   - name: Join additional cluster nodes
     shell: "{{ couchbase_server_home_path }}/bin/couchbase-cli server-add -c {{ couchbase_server_primary_node }}:{{ couchbase_server_admin_port }} --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} --server-add={{hostvars[item].ansible_fqdn}}:{{ couchbase_server_admin_port }} --server-add-username={{ couchbase_server_admin }} --server-add-password={{ couchbase_server_password }}"
     with_items: "{{ groups['additional'] | default([]) }}"
