Added product_type feature to make openshift-ansible work with across origin, openshift and atomic-enterprise products.

--- a/playbooks/common/openshift-cluster/update_repos_and_packages.yml
+++ b/playbooks/common/openshift-cluster/update_repos_and_packages.yml
@@ -2,6 +2,7 @@
 - hosts: oo_hosts_to_update
   vars:
     openshift_deployment_type: "{{ deployment_type }}"
+    openshift_product_type: "{{ product_type }}"
   roles:
   - role: rhel_subscribe
     when: deployment_type == "enterprise" and
