--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -21,6 +21,7 @@
           hostname: "{{ openshift_hostname | default(None) }}"
           public_hostname: "{{ openshift_public_hostname | default(None) }}"
           deployment_type: "{{ openshift_deployment_type }}"
+          product_type: "{{ openshift_product_type }}"
       - role: master
         local_facts:
           api_port: "{{ openshift_master_api_port | default(None) }}"
