--- a/roles/openshift_master/defaults/main.yml
+++ b/roles/openshift_master/defaults/main.yml
@@ -5,11 +5,11 @@ openshift_node_ips: []
 os_firewall_allow:
 - service: etcd embedded
   port: 4001/tcp
-- service: Atomic Enterprise api https
+- service: api server https
   port: 8443/tcp
-- service: Atomic Enterprise dns tcp
+- service: dns tcp
   port: 53/tcp
-- service: Atomic Enterprise dns udp
+- service: dns udp
   port: 53/udp
 - service: Fluentd td-agent tcp
   port: 24224/tcp
@@ -22,9 +22,9 @@ os_firewall_allow:
 - service: Corosync UDP
   port: 5405/udp
 os_firewall_deny:
-- service: Atomic Enterprise api http
+- service: api server http
   port: 8080/tcp
-- service: former Atomic Enterprise web console port
+- service: former web console port
   port: 8444/tcp
 - service: former etcd peer port
   port: 7001/tcp
