--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -12,11 +12,11 @@
     msg: "openshift_master_cluster_password must be set for multi-master installations"
   when: openshift_master_ha | bool and not openshift.master.cluster_defer_ha | bool and openshift_master_cluster_password is not defined
 
-- name: Install Atomic Enterprise Master package
-  yum: pkg=atomic-enterprise-master state=present
+- name: Install Master package
+  yum: pkg={{ product_type }}-master state=present
   register: install_result
 
-- name: Set master Atomic Enterprise facts
+- name: Set master facts
   openshift_facts:
     role: master
     local_facts:
@@ -56,7 +56,7 @@
       default_subdomain: "{{ osm_default_subdomain | default(None) }}"
 
 # TODO: These values need to be configurable
-- name: Set dns Atomic Enterprise facts
+- name: Set dns facts
   openshift_facts:
     role: dns
     local_facts:
@@ -76,14 +76,14 @@
   args:
     creates: "{{ openshift_master_policy }}"
   notify:
-  - restart atomic-enterprise-master
+  - restart {{ product_type }}-master
 
 - name: Create the scheduler config
   template:
     dest: "{{ openshift_master_scheduler_conf }}"
     src: scheduler.json.j2
   notify:
-  - restart atomic-enterprise-master
+  - restart {{ product_type }}-master
 
 - name: Install httpd-tools if needed
   yum: pkg=httpd-tools state=present
@@ -105,11 +105,11 @@
     dest: "{{ openshift_master_config_file }}"
     src: master.yaml.v1.j2
   notify:
-  - restart atomic-enterprise-master
+  - restart {{ product_type }}-master
 
-- name: Configure Atomic Enterprise settings
+- name: Configure master settings
   lineinfile:
-    dest: /etc/sysconfig/atomic-enterprise-master
+    dest: /etc/sysconfig/{{ product_type }}-master
     regexp: "{{ item.regex }}"
     line: "{{ item.line }}"
   with_items:
@@ -118,10 +118,10 @@
     - regex: '^CONFIG_FILE='
       line: "CONFIG_FILE={{ openshift_master_config_file }}"
   notify:
-  - restart atomic-enterprise-master
+  - restart {{ product_type }}-master
 
-- name: Start and enable atomic-enterprise-master
-  service: name=atomic-enterprise-master enabled=yes state=started
+- name: Start and enable master
+  service: name={{ product_type }}-master enabled=yes state=started
   when: not openshift_master_ha | bool
   register: start_result
 
@@ -142,7 +142,7 @@
   shell: echo {{ openshift_master_cluster_password | quote }} | passwd --stdin hacluster
   when: install_result | changed
 
-- name: Create the Atomic Enterprise client config dir(s)
+- name: Create the client config dir(s)
   file:
     path: "~{{ item }}/.kube"
     state: directory
@@ -155,7 +155,7 @@
 
 # TODO: Update this file if the contents of the source file are not present in
 # the dest file, will need to make sure to ignore things that could be added
-- name: Copy the Atomic Enterprise admin client config(s)
+- name: Copy the admin client config(s)
   command: cp {{ openshift_master_config_dir }}/admin.kubeconfig ~{{ item }}/.kube/config
   args:
     creates: ~{{ item }}/.kube/config
@@ -163,7 +163,7 @@
   - root
   - "{{ ansible_ssh_user }}"
 
-- name: Update the permissions on the Atomic Enterprise admin client config(s)
+- name: Update the permissions on the admin client config(s)
   file:
     path: "~{{ item }}/.kube/config"
     state: file
