--- a/roles/openshift_node/handlers/main.yml
+++ b/roles/openshift_node/handlers/main.yml
@@ -1,3 +1,3 @@
 ---
-- name: restart atomic-enterprise-node
-  service: name=atomic-enterprise-node state=restarted
+- name: restart node
+  service: name={{ product_type }}-node state=restarted
