Simplify zone templates

--- a/roles/dns_server/tasks/main.yml
+++ b/roles/dns_server/tasks/main.yml
@@ -25,15 +25,22 @@
 - name: Copy rndc key
   copy: src=rndc.key dest=/etc/rndc.key mode=0640 owner=root group=named
 
-- name: Internal zone file
-  template: src=example.com-internal dest={{ named_dir}}/{{ dns_domain }}-internal
-
+- set_fact: view_type=external
 - name: External zone file
-  template: src=example.com dest={{ named_dir}}/{{ dns_domain }}
+  template:
+    src: "example.com"
+    dest: "{{ named_dir}}/{{ dns_domain }}-{{ view_type }}"
 
-  # TODO: this one needs further "templatization"
+- set_fact: view_type=internal
+- name: Internal zone file
+  template:
+    src: "example.com"
+    dest: "{{ named_dir}}/{{ dns_domain }}-{{ view_type }}"
+
 - name: Reverse zone file
-  template: src=192.168.1 dest={{ named_dir}}/{{ subnet_name }}
+  template:
+    src: "192.168.1"
+    dest: "{{ named_dir}}/{{ subnet_name }}"
 
 - name: Build named.conf
   template: src=named.conf dest=/etc/named.conf
