--- a/roles/dns_server/templates/named.conf
+++ b/roles/dns_server/templates/named.conf
@@ -60,7 +60,7 @@ view "global" {
 
   zone "{{ dns_domain }}" IN {
 	  type master;
-	  file "{{ dns_domain }}";
+	  file "{{ dns_domain }}-external";
   };
 
 };
