Use deployment_type, not openshift_deployment_type
This seems to be what's used in other places

--- a/playbooks/byo/rhel_subscribe.yml
+++ b/playbooks/byo/rhel_subscribe.yml
@@ -1,10 +1,10 @@
 ---
 - hosts: all
   vars:
-    deployment_type: "{{ openshift_deployment_type }}"
+    openshift_deployment_type: "{{ deployment_type }}"
   roles:
   - role: rhel_subscribe
-    when: openshift_deployment_type == "enterprise" and
+    when: deployment_type == "enterprise" and
           ansible_distribution == "RedHat" and
           lookup('oo_option', 'rhel_skip_subscription') | default(rhsub_skip, True) |
           default('no', True) | lower in ['no', 'false']
