--- a/roles/openshift_master_ca/tasks/main.yml
+++ b/roles/openshift_master_ca/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install the OpenShift package for admin tooling
-  yum: pkg=openshift state=present
+  yum: pkg={{ product_type }} state=present
   register: install_result
 
 - name: Reload generated facts
